api_rust_loco/tests/requests/snapshots/can_login_without_verify@auth_request.snap
---
source: tests/requests/auth.rs
expression: login_response.text()
---
"{\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"loco\",\"roles\":[\"user\"],\"can_manage_admin\":false,\"is_verified\":false}"
