api_rust_loco/tests/requests/snapshots/login_with_valid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"loco\",\"roles\":[\"user\"],\"can_manage_admin\":false,\"is_verified\":true}",
)
